apps/docs/v0.2.11/reference/cli.mdx
---
title: "CLI reference"
description: "Rigkit CLI commands, global options, project discovery, completion, cache commands, and JSON output."
noindex: true
---

The global command is `rig`. It starts or connects to the project-local runtime
installed by `@rigkit/sdk`, loads the selected `rigkit/index.ts`, and runs core
or project-defined operations.

## Common workflows

If you're new to `rig`, these are the command sequences you'll run most often.

**Set up a project for the first time:**

```sh
rig init website --package-manager pnpm
cd website
rig plan         # see what will run
rig apply        # run pending setup tasks, cache results
```

**Create and use a workspace:**

```sh
rig create --workflow dev dev              # create a workspace from cached state
rig run dev ssh             # run a project-defined operation
rig run dev open-cmux       # operations are defined in rigkit/index.ts
rig ls                      # list workspaces
rig rm dev                  # tear down a workspace
```

**Refresh setup after editing the config:**

```sh
rig plan                    # preview what will rerun
rig apply                   # rerun only stale tasks
```

**Force a rerun:**

```sh
rig cache invalidate <task>     # mark one task stale
rig cache invalidate --all      # mark every task stale
rig cache clear --local         # delete local cache entries
```

## Agents and CI

Agents, CI jobs, and scripts should run Rigkit non-interactively:

```sh
rig init website --package-manager skip --json
rig plan --workflow api --json
rig apply --workflow web --json
rig create --workflow dev dev --json
rig run dev status --json
rig rm dev --yes --json
rig cache invalidate --all --yes --json
```

Use `--json` on commands that support it instead of scraping interactive output.
Use `--yes` only for commands that ask for confirmation: `rig rm` and
`rig cache invalidate --all`.

The rest of this page is a reference for every command and option.

## Global options

Global options come before the command. Use double-dash long flags for
consistency with command options:

```sh
rig --chdir=examples/smoke plan --workflow smoke
rig --chdir=examples/global-fragments apply --workflow api
rig --state=/tmp/rigkit-state.sqlite plan --workflow dev
rig --json plan --workflow dev
```

Options:

| Option | Description |
| --- | --- |
| `--chdir <dir>` | Switch to a directory before resolving `rigkit/index.ts`. |
| `--config <file>` | Load a specific entrypoint file, relative to `--chdir` when set. |
| `--state <file>` | Use a specific local runtime state database. |
| `--json` | Print machine-readable JSON where supported. |

By default Rigkit searches upward from the current directory for
`rigkit/index.ts`.

## `rig init`

Initialize a project:

```sh
rig init
rig init website --package-manager pnpm
rig init --name platform --package-manager skip
```

Options:

| Option | Description |
| --- | --- |
| `--dir <dir>` | Directory to initialize. |
| `--name <name>` | Project/package name. Defaults from the target directory when omitted. |
| `--api-key <key>` | Write `FREESTYLE_API_KEY` to `.env`. |
| `--package-manager <pm>` | `npm`, `bun`, `pnpm`, or `skip`. |
| `--force` | Overwrite an existing config file. |
| `--json` | Print the init result as JSON. |

`rig init` creates a project directory, `rigkit/index.ts`, package metadata, and
ignore rules for `.env` and `.rigkit/`.

## `rig plan`

Show which workflow tasks are cached or pending:

```sh
rig plan --workflow dev
rig plan --workflow api
rig plan --all
rig plan --discover
rig plan --workflow api --json
```

Options:

| Option | Description |
| --- | --- |
| `--workflow <name>` | Select a workflow. Interactive terminals prompt when omitted. |
| `--all` | Run against every discovered project. |
| `--discover` | Discover projects below the selected directory. |
| `--json` | Print JSON. |

`plan` does not run pending tasks or start provider auth flows. It reports the
graph state Rigkit would use for `apply`, plus provider checks such as missing
Freestyle authentication or the currently selected Freestyle team.

## `rig apply`

Run pending workflow tasks and write cached outputs:

```sh
rig apply --workflow dev
rig apply --workflow web
rig apply --all
rig apply --discover
rig apply --workflow web --json
```

Options are the same as `plan`.

## `rig create`

Create a named workspace from the selected workflow's final context:

```sh
rig create --workflow dev dev
rig create --workflow api review-123
rig create --workflow dev dev --json
```

If the project has no workspace lifecycle, `create` is not available.

## `rig run`

Run a workspace operation:

```sh
rig run dev ssh
rig run dev open-cmux
rig run dev status --json
```

The first argument is the workspace name. The second is a
`.workspaceOperation(...)` id from the config.

Operations such as `ssh`, `open-cmux`, `open-vscode`, and `status` are defined
in `rigkit/index.ts`. The names and behavior vary by project. After `rig create`,
the CLI prints available next-step operations in interactive terminals. Use
completion or `rig run --help` for command syntax.

Project-defined Zod operation inputs become CLI flags. For example, an operation
declaring a `port` input becomes `--port`, and Zod enums complete as selectable
values. Use `--json` for machine-readable operation results.

## `rig rm`

Remove workspaces:

```sh
rig rm dev
rig rm dev --yes
rig rm --all --yes
rig rm --json
```

Options:

| Option | Description |
| --- | --- |
| `-y`, `--yes` | Skip confirmation. |
| `--all` | Remove every workspace in the selected project. |
| `--json` | Print JSON. |

`rm` calls the workflow's `workspace.remove` hook before deleting the workspace
record.

## `rig ls`

List workspaces:

```sh
rig ls
rig ls --json
```

Additional list targets:

```sh
rig ls snapshots
rig ls config
```

`snapshots` lists cached snapshot runs. `config` shows resolved project paths.

## `rig cache`

Inspect and change cache state.

List cache entries:

```sh
rig cache ls
rig cache ls --json
```

Invalidate cached task output so tasks rerun on the next plan/apply:

```sh
rig cache invalidate install-tooling
rig cache invalidate --all
rig cache invalidate --all --yes
```

Clear cache entries:

```sh
rig cache clear --local
rig cache clear --global
rig cache clear --global --all
```

Options:

| Option | Description |
| --- | --- |
| `--local` | Clear local cache entries for the selected config. |
| `--global` | Clear global fragments reachable from the selected workflow. |
| `--all` | With `--global`, clear every global fragment without loading a config. |
| `--json` | Print JSON. |

Use invalidation when you want Rigkit to keep the cache records but mark them
stale. Use clear when you want to delete cache records.

## `rig providers`

Manage provider-owned local state.

Clear Freestyle browser auth, selected team, and provider identity state:

```sh
rig providers freestyle clear
rig providers freestyle clear --json
```

This does not load a project config or delete project `.rigkit` state. Clearing
provider-owned state changes the provider check fingerprint, so cached workflow
tasks that depended on that provider are treated as stale.

## `rig projects`

Discover Rigkit projects below the current or selected directory:

```sh
rig projects
rig --chdir=examples projects
rig projects --json
```

Discovery skips `.git`, `.rigkit`, `node_modules`, `dist`, and `build`.

## `rig doctor`

Show runtime diagnostics:

```sh
rig doctor
rig doctor --cli
rig doctor --json
```

Use `--cli` to show CLI diagnostics without connecting to a project runtime.

## `rig completion`

Generate shell completion:

```sh
eval "$(rig completion zsh)"
eval "$(rig completion bash)"
rig completion fish | source
```

Completion suggests commands, options, workspace names, and workspace
operations. If you installed Rigkit with the official installer, the installer
usually adds the completion hook to your shell profile for future terminal
sessions.

## `rig version` and `rig help`

```sh
rig version
rig help
rig run --help
```

`rig --version` and `rig -v` also print the CLI version.

## Environment variables

| Variable | Description |
| --- | --- |
| `RIGKIT_RENDER=0` | Force the plain text renderer instead of the interactive timeline. |
| `RIGKIT_NO_CONSOLE_INTERCEPT=1` | Disable task console interception and write directly to the host terminal. |
| `FREESTYLE_API_KEY` | Optional Freestyle API key when configs opt into API-key auth. |
| `FREESTYLE_TEAM_ID` | Select a Freestyle team without prompting during browser auth. |

Project `.env` files are loaded from the selected project directory.

## Exit behavior

Rigkit exits non-zero when:

- config loading fails;
- provider startup fails;
- a task, workspace hook, or operation throws;
- operation input validation fails;
- a package-manager install from `rig init` fails;
- a selected workspace or operation does not exist.

For automation, prefer the [Agents and CI](#agents-and-ci) forms above.
